--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "stashup-fastapi-worker"
 main = "main.py"
 compatibility_date = "2024-01-01"
+compatibility_flags = ["python_workers"]
 
 [site]
 bucket = "static"
