--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,12 @@
-name = "stashup-fastapi-worker"
+name = "stashup"
 main = "main.py"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["python_workers"]
+
+[[rules]]
+type = "Data"
+globs = ["vendor/**/*.so"]
+fallthrough = true
 
 [site]
 bucket = "static"
